--- a/AkkaConfigProvider/AkkaConfigProvider.csproj
+++ b/AkkaConfigProvider/AkkaConfigProvider.csproj
@@ -2,6 +2,13 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <PackageVersion>0.0.1</PackageVersion>
+        <Title>AkkaConfigProvider</Title>
+        <Authors>Marin</Authors>
+        <Description>A small library for loading akka configuration from appsettings.json.</Description>
+        <PackageLicenseUrl>https://licenses.nuget.org/MIT</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/mrn-aglic/akkaconfigprovider/tree/main</RepositoryUrl>
+        <RepositoryType>Git</RepositoryType>
     </PropertyGroup>
 
     <ItemGroup>
